added video/checkpoint epoch to the config panel

--- a/mocogan_train.ipynb
+++ b/mocogan_train.ipynb
@@ -161,7 +161,13 @@
         "d_E = 10 #@param {type:\"integer\"}\n",
         "hidden_size = 100 #@param {type:\"integer\"}\n",
         "d_C = 50 #@param {type:\"integer\"}\n",
-        "d_M = 10 #@param {type:\"integer\"}"
+        "d_M = 10 #@param {type:\"integer\"}\n",
+        "\n",
+        "#@markdown ##log parameters\n",
+        "#@markdown - the number of epoch to save 1 generated video (default:1000)\n",
+        "video_epoch = 1000 #@param {type:\"integer\"}\n",
+        "#@markdown - the number of epoch to save model checkpoint (default:10000)\n",
+        "checkpoint_epoch = 5000 #@param {type:\"integer\"}"
       ],
       "execution_count": null,
       "outputs": []
@@ -269,7 +275,9 @@
         "--d_E \"$d_E\" \\\n",
         "--hidden_size \"$hidden_size\" \\\n",
         "--d_C \"$d_C\" \\\n",
-        "--d_M \"$d_M\""
+        "--d_M \"$d_M\" \\\n",
+        "--video_epoch \"$video_epoch\" \\\n",
+        "--checkpoint_epoch \"$checkpoint_epoch\""
       ],
       "execution_count": null,
       "outputs": []
