--- a/mocogan_train.ipynb
+++ b/mocogan_train.ipynb
@@ -129,8 +129,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BVjGm8m_q9R6",
-        "cellView": "form"
+        "id": "BVjGm8m_q9R6"
       },
       "source": [
         "#@title Configuration\n",
@@ -152,7 +151,7 @@
         "lr = 0.0002 #@param {type:\"number\"}\n",
         "#@markdown - the height and width of input (resized) video\n",
         "img_size = 96 #@param {type:\"integer\"}\n",
-        "#@markdown - the number of channel of input (resized) video\n",
+        "#@markdown - the number of video input channels (resized)\n",
         "nc = 3 #@param {type:\"integer\"}\n",
         "\n",
         "#@markdown ##model parameters\n",
