added option to save resized(preprocessed) dataset

--- a/mocogan_train.ipynb
+++ b/mocogan_train.ipynb
@@ -129,7 +129,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BVjGm8m_q9R6"
+        "id": "BVjGm8m_q9R6",
+        "cellView": "form"
       },
       "source": [
         "#@title Configuration\n",
@@ -137,7 +138,12 @@
         "#@markdown Directories can be found via file explorer on the left by navigating into `drive` to the desired folders. \n",
         "#@markdown Then right-click and `Copy path`.\n",
         "#@markdown - The video database directory\n",
-        "video_db_dir = \"/content/drive/My Drive/VIDEOS/SINGLE_FILE\" #@param {type:\"string\"}\n",
+        "video_db_dir = \"/content/drive/My Drive/VIDEOS/SINGLE_FILE/VIDEO1\" #@param {type:\"string\"}\n",
+        "# video_db_dir = \"/content/drive/My Drive/VIDEOS/RESIZED/SINGLE_FILE/VIDEO1\" #@param {type:\"string\"}\n",
+        "#@markdown - Optional: The folder to save resized(preprocessed) videos\n",
+        "#@markdown  - If resize_save_dir=\"\", videos will not be saved and will be lost when runtime timeout.\n",
+        "#@markdown  - If resize_save_dir==video_db_dir, assume the videos are already resized (no preprocessing).\n",
+        "resize_save_dir = \"/content/drive/My Drive/VIDEOS/RESIZED/SINGLE_FILE/VIDEO1\" #@param {type:\"string\"}\n",
         "# experiment_dir = \"/content/drive/My Drive/IRCMS_GAN_collaborative_database/Experiments/colab-violingan/melgan\" #@param {type:\"string\"}\n",
         "#@markdown - The output directory of generated videos \n",
         "out_dir = \"/content/drive/My Drive/IRCMS_GAN_collaborative_database/Experiments/colab-mocogan\" #@param {type:\"string\"}\n",
@@ -151,7 +157,7 @@
         "lr = 0.0002 #@param {type:\"number\"}\n",
         "#@markdown - the height and width of input (resized) video\n",
         "img_size = 96 #@param {type:\"integer\"}\n",
-        "#@markdown - the number of video input channels (resized)\n",
+        "#@markdown - the number of channel of input (resized) video\n",
         "nc = 3 #@param {type:\"integer\"}\n",
         "\n",
         "#@markdown ##model parameters\n",
@@ -211,8 +217,10 @@
       },
       "source": [
         "#@title Copy video files to runtime\n",
-        "\n",
-        "local_wav_dir = Path(\"/content/mocogan/raw_data\")\n",
+        "if resize_save_dir == video_db_dir:\n",
+        "    local_wav_dir = Path(\"/content/mocogan/resized_data\")\n",
+        "else:\n",
+        "    local_wav_dir = Path(\"/content/mocogan/raw_data\")\n",
         "!find \"{video_db_dir}\" -maxdepth 1 -type f | xargs -t -d \"\\n\" -I'%%' -P 10 -n 1 rsync -a '%%' \"$local_wav_dir\"/\n",
         "clear_on_success(\"All files copied to this runtime.\")\n"
       ],
@@ -230,23 +238,32 @@
         "\n",
         "import glob\n",
         "import os\n",
-        "current_path = \"/content/mocogan/\"\n",
-        "resized_path = os.path.join(current_path, 'resized_data')\n",
-        "files = glob.glob(os.path.join(current_path, 'raw_data/*.*'))\n",
         "\n",
-        "#remove all files in resized_path first\n",
-        "for x, file_path in enumerate(glob.glob(os.path.join(resized_path, '*.*'))):\n",
-        "    try:\n",
-        "        os.remove(file_path)\n",
-        "    except OSError as e:\n",
-        "        print(\"Error: %s : %s\" % (file_path, e.strerror))\n",
+        "if resize_save_dir != video_db_dir:\n",
+        "    current_path = \"/content/mocogan/\"\n",
+        "    resized_path = os.path.join(current_path, 'resized_data')\n",
+        "    files = glob.glob(os.path.join(current_path, 'raw_data/*.*'))\n",
         "\n",
-        "for i, file in enumerate(files):\n",
-        "    resized_filename = os.path.join(resized_path, str(i))\n",
-        "    !ffmpeg -i \"{file}\" -pix_fmt yuv420p -vf scale=\"{img_size}\":\"{img_size}\" \"{resized_filename}\".mp4\n",
+        "    #remove all files in resized_path first\n",
+        "    for x, file_path in enumerate(glob.glob(os.path.join(resized_path, '*.*'))):\n",
+        "        try:\n",
+        "            os.remove(file_path)\n",
+        "        except OSError as e:\n",
+        "            print(\"Error: %s : %s\" % (file_path, e.strerror))\n",
         "\n",
-        "# crop=96:96:42:24\n",
-        "clear_on_success(\"All files resized.\")"
+        "    for i, file in enumerate(files):\n",
+        "        resized_filename = os.path.join(resized_path, str(i))\n",
+        "        !ffmpeg -i \"{file}\" -pix_fmt yuv420p -vf scale=\"{img_size}\":\"{img_size}\" \"{resized_filename}\".mp4\n",
+        "\n",
+        "    # crop=96:96:42:24\n",
+        "\n",
+        "    if resize_save_dir:\n",
+        "        resize_save_dir = Path(resize_save_dir)\n",
+        "        resize_save_dir.mkdir(parents=True, exist_ok=True)\n",
+        "        # copy files to processed dir for resize_save_dir\n",
+        "        !find \"{resized_path}\" -maxdepth 1 -type f | xargs -t -d \"\\n\" -I'%%' -P 10 -n 1 rsync -a '%%' \"$resize_save_dir\"/\n",
+        "\n",
+        "    clear_on_success(\"All files resized.\")"
       ],
       "execution_count": null,
       "outputs": []
