modified blend session video_dir default

--- a/mocogan_generate.ipynb
+++ b/mocogan_generate.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "mocogan_generate.ipynb",
+      "name": "Copy of mocogan_generate.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
@@ -46,7 +46,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "77f10eab-1d70-4345-e563-7df5f5b61c5f"
+        "outputId": "7e4d3a13-496d-4548-cdea-2d6b7750fec2"
       },
       "source": [
         "#@markdown Check GPU, should be a Tesla V100\n",
@@ -60,7 +60,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "GPU 0: Tesla K80 (UUID: GPU-ba1c25a4-a5d4-f7fd-62eb-fd44bd700197)\n",
+            "GPU 0: Tesla K80 (UUID: GPU-2af28ce2-28cc-50b7-a536-cf67d90eb249)\n",
             "We have 2 CPU cores.\n"
           ]
         }
@@ -74,7 +74,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bbad177b-d82a-4ea9-b622-569504bdce93"
+        "outputId": "0b010023-7fad-4224-c90c-cbfc7da0da8f"
       },
       "source": [
         "#@markdown Mount google drive\n",
@@ -133,32 +133,37 @@
         "#@markdown - The output directory of generated videos \n",
         "video_dir = \"/content/drive/My Drive/IRCMS_GAN_collaborative_database/Experiments/colab-mocogan\" #@param {type:\"string\"}\n",
         "#@markdown - set wandb run id of logged run to resume from there\n",
-        "resume_id = \"3ald18we\" #@param {type:\"string\"}\n",
+        "resume_id = \"fqyixhf5\" #@param {type:\"string\"}\n",
         "\n",
         "if not generate_mocogan:\n",
         "    num_generate_video = 0\n",
-        "if resume_id:\n",
+        "if resume_id and generate_mocogan:\n",
         "    video_dir = Path(video_dir) / resume_id\n",
         "    video_dir.mkdir(parents=True, exist_ok=True)"
       ],
-      "execution_count": 24,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "pBbbEqNZxngL",
-        "cellView": "form"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "cellView": "form",
+        "outputId": "03c86b73-7aa4-4d41-ec76-fbe6ff52e5ac"
       },
       "source": [
         "#@title Clone mocogan repo + Install Dependencies (wandb and log in)\n",
+        "%pip install sk-video\n",
+        "%pip install wandb==0.10.12\n",
         "\n",
         "!git clone https://github.com/buganart/mocogan\n",
         "\n",
         "%cd /content/mocogan\n",
         "# %pip install -r requirements.txt\n",
-        "%pip install sk-video\n",
-        "%pip install wandb==0.10.12\n",
+        "output.clear()\n",
         "\n",
         "import wandb\n",
         "from pathlib import Path\n",
@@ -184,8 +189,16 @@
         "print(\"ok!\")\n",
         "clear_on_success(\"Dependencies installed.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dependencies installed.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
