--- a/mocogan_generate.ipynb
+++ b/mocogan_generate.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of mocogan_generate.ipynb",
+      "name": "mocogan_generate.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
@@ -12,8 +12,7 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -35,7 +34,7 @@
       "source": [
         "#@markdown Before starting please save the notebook in your drive by clicking on `File -> Save a copy in drive`"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -46,7 +45,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7e4d3a13-496d-4548-cdea-2d6b7750fec2"
+        "outputId": "f834db6d-d835-4614-df6f-ee46103b8184"
       },
       "source": [
         "#@markdown Check GPU, should be a Tesla V100\n",
@@ -54,14 +53,15 @@
         "import os\n",
         "print(f\"We have {os.cpu_count()} CPU cores.\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "GPU 0: Tesla K80 (UUID: GPU-2af28ce2-28cc-50b7-a536-cf67d90eb249)\n",
-            "We have 2 CPU cores.\n"
+            "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running.\n",
+            "\n",
+            "We have 4 CPU cores.\n"
           ]
         }
       ]
@@ -70,11 +70,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "BJyxzcLOhgWY",
-        "cellView": "form",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0b010023-7fad-4224-c90c-cbfc7da0da8f"
+        "cellView": "form"
       },
       "source": [
         "#@markdown Mount google drive\n",
@@ -95,16 +91,8 @@
         "        output.clear()\n",
         "        print(msg)"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -141,18 +129,14 @@
         "    video_dir = Path(video_dir) / resume_id\n",
         "    video_dir.mkdir(parents=True, exist_ok=True)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "pBbbEqNZxngL",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "cellView": "form",
-        "outputId": "03c86b73-7aa4-4d41-ec76-fbe6ff52e5ac"
+        "cellView": "form"
       },
       "source": [
         "#@title Clone mocogan repo + Install Dependencies (wandb and log in)\n",
@@ -189,16 +173,8 @@
         "print(\"ok!\")\n",
         "clear_on_success(\"Dependencies installed.\")"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Dependencies installed.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -230,8 +206,6 @@
         "#@markdown - The input directory of source videos and output directory of blended videos\n",
         "#@markdown - If the video_blend_dir is **empty**, **video_blend_dir = video_dir** above\n",
         "video_blend_dir = \"\" #@param {type:\"string\"}\n",
-        "#@markdown  -  if generate_mocogan=False, then assume video_blend_dir already has some video files.\n",
-        "blend_videos = True #@param {type:\"boolean\"}\n",
         "#@markdown - The TOTAL number of blend videos to generate\n",
         "num_blend_video = 3 #@param {type:\"integer\"}\n",
         "\n",
@@ -297,12 +271,76 @@
         "\n",
         "\n",
         "video_filelist = Path(video_blend_dir).rglob(\"*.mp4\")\n",
-        "video_filelist = list(video_filelist)\n",
+        "video_filelist = sorted(list(video_filelist))\n",
         "for _ in range(num_blend_video):\n",
         "    selected_indices = np.random.choice(len(video_filelist), size=2, replace=False)\n",
         "    path_1 = video_filelist[selected_indices[0]]\n",
         "    path_2 = video_filelist[selected_indices[1]]\n",
         "    combine_2videos(path_1, path_2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OHzSE-tb7aT7",
+        "cellView": "form"
+      },
+      "source": [
+        "#@title CONCAT VIDEO\n",
+        "#@markdown - **PLEASE DOUBLE CHECK THE video_concat_dir BELOW IS CORRECT.**\n",
+        "#@markdown - The input directory of source videos and output directory of concat videos\n",
+        "#@markdown - If the video_concat_dir is **empty**, **video_concat_dir = video_dir** above\n",
+        "video_concat_dir = \"\" #@param {type:\"string\"}\n",
+        "#@markdown - The duration(time) per video segment\n",
+        "segment_time = 1.0 #@param {type:\"number\"}\n",
+        "#@markdown - The final/total duration(time) of the generated video\n",
+        "total_time = 10.0 #@param {type:\"number\"}\n",
+        "\n",
+        "\n",
+        "if not video_concat_dir:\n",
+        "    video_concat_dir = video_dir\n",
+        "\n",
+        "\n",
+        "import numpy as np\n",
+        "from moviepy.editor import *\n",
+        "from pathlib import Path\n",
+        "\n",
+        "\n",
+        "def concat_videos(video_concat_dir, segment_time, total_time):\n",
+        "    print(\"video_concat_dir:\", video_concat_dir)\n",
+        "    video_filelist = Path(video_concat_dir).rglob(\"*.mp4\")\n",
+        "    video_filelist = sorted(list(video_filelist))\n",
+        "\n",
+        "    num_segments = int(total_time / segment_time)\n",
+        "    \n",
+        "    output_clips = []\n",
+        "    for s in range(num_segments):\n",
+        "        #select video\n",
+        "        selected_index = np.random.choice(len(video_filelist), size=1, replace=False)\n",
+        "        print(f\"selected_index for segment {s}:\",selected_index[0])\n",
+        "        print(f\"selected_video for segment {s}:\",str(video_filelist[selected_index[0]]))\n",
+        "        selected_video = VideoFileClip(str(video_filelist[selected_index[0]]))\n",
+        "        #select slice timestamp\n",
+        "        duration = selected_video.duration\n",
+        "        print(\"selected video duration:\", duration)\n",
+        "        timestamp = np.random.rand(1) * (duration - segment_time)\n",
+        "        #slice subclip\n",
+        "        subclip = selected_video.subclip(timestamp, timestamp+segment_time)\n",
+        "        print(\"subclip duration:\", subclip.duration)\n",
+        "\n",
+        "        #add to output_clips\n",
+        "        output_clips.append(subclip)\n",
+        "\n",
+        "    #concat all subclips\n",
+        "    final = concatenate_videoclips(output_clips)\n",
+        "\n",
+        "    #write to same folder\n",
+        "    final.write_videofile(str(Path(video_concat_dir) / (f\"concat_segtime{segment_time}_total{total_time}.mp4\")))\n",
+        "\n",
+        "\n",
+        "concat_videos(video_concat_dir, segment_time, total_time)"
       ],
       "execution_count": null,
       "outputs": []
