updated concat video part to handle different fps

--- a/mocogan_generate.ipynb
+++ b/mocogan_generate.ipynb
@@ -41,11 +41,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "XQ-pH7tyK9xW",
-        "cellView": "form",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f834db6d-d835-4614-df6f-ee46103b8184"
+        "cellView": "form"
       },
       "source": [
         "#@markdown Check GPU, should be a Tesla V100\n",
@@ -54,17 +50,7 @@
         "print(f\"We have {os.cpu_count()} CPU cores.\")"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running.\n",
-            "\n",
-            "We have 4 CPU cores.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -209,6 +195,9 @@
         "#@markdown - The TOTAL number of blend videos to generate\n",
         "num_blend_video = 3 #@param {type:\"integer\"}\n",
         "\n",
+        "%pip install sk-video\n",
+        "clear_on_success()\n",
+        "\n",
         "if not video_blend_dir:\n",
         "    video_blend_dir = video_dir\n",
         "#reference: https://www.geeksforgeeks.org/blending-of-two-videos-using-python/\n",
@@ -302,7 +291,7 @@
         "if not video_concat_dir:\n",
         "    video_concat_dir = video_dir\n",
         "\n",
-        "\n",
+        "import datetime\n",
         "import numpy as np\n",
         "from moviepy.editor import *\n",
         "from pathlib import Path\n",
@@ -310,8 +299,11 @@
         "\n",
         "def concat_videos(video_concat_dir, segment_time, total_time):\n",
         "    print(\"video_concat_dir:\", video_concat_dir)\n",
-        "    video_filelist = Path(video_concat_dir).rglob(\"*.mp4\")\n",
+        "    video_filelist = Path(video_concat_dir).rglob(\"*.*\")\n",
         "    video_filelist = sorted(list(video_filelist))\n",
+        "    #filter processed file\n",
+        "    video_filelist = [v for v in video_filelist if \"concat_output\" not in str(v)]\n",
+        "    video_filelist = [v for v in video_filelist if v.suffix.lower() in [\".mp4\", \".mov\"]]\n",
         "\n",
         "    num_segments = int(total_time / segment_time)\n",
         "    \n",
@@ -324,20 +316,27 @@
         "        selected_video = VideoFileClip(str(video_filelist[selected_index[0]]))\n",
         "        #select slice timestamp\n",
         "        duration = selected_video.duration\n",
-        "        print(\"selected video duration:\", duration)\n",
-        "        timestamp = np.random.rand(1) * (duration - segment_time)\n",
-        "        #slice subclip\n",
-        "        subclip = selected_video.subclip(timestamp, timestamp+segment_time)\n",
-        "        print(\"subclip duration:\", subclip.duration)\n",
+        "        if (duration - segment_time) < 0:\n",
+        "            print(f\"!!!!!!!!! video duration is too small (duration:{duration}), set subclip=video !!!!!!!!!!!\")\n",
+        "            subclip = selected_video\n",
+        "        else:\n",
+        "            timestamp = round(float(np.random.rand(1) * (duration - segment_time)),2)\n",
+        "            #slice subclip\n",
+        "            subclip = selected_video.subclip(timestamp, timestamp+segment_time)\n",
+        "            print(\"selected timestamp (duration):\", timestamp, duration)\n",
         "\n",
         "        #add to output_clips\n",
         "        output_clips.append(subclip)\n",
         "\n",
         "    #concat all subclips\n",
-        "    final = concatenate_videoclips(output_clips)\n",
+        "    final = concatenate_videoclips(output_clips, method=\"compose\")\n",
         "\n",
         "    #write to same folder\n",
-        "    final.write_videofile(str(Path(video_concat_dir) / (f\"concat_segtime{segment_time}_total{total_time}.mp4\")))\n",
+        "    x = datetime.datetime.now()\n",
+        "    datetimeStr = str(x.strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
+        "    segtimeStr = str(segment_time).replace(\".\", \"+\")\n",
+        "    totaltimeStr = str(total_time).replace(\".\", \"+\")\n",
+        "    final.write_videofile(str(Path(video_concat_dir) / (f\"concat_output-segtime{segtimeStr}_total{totaltimeStr}-{datetimeStr}.mp4\")))\n",
         "\n",
         "\n",
         "concat_videos(video_concat_dir, segment_time, total_time)"
