concat video applied fixed resolution

--- a/mocogan_generate.ipynb
+++ b/mocogan_generate.ipynb
@@ -281,6 +281,7 @@
         "#@markdown - **PLEASE DOUBLE CHECK THE video_concat_dir BELOW IS CORRECT.**\n",
         "#@markdown - The input directory of source videos and output directory of concat videos\n",
         "#@markdown - If the video_concat_dir is **empty**, **video_concat_dir = video_dir** above\n",
+        "# video_concat_dir = \"/content/drive/My Drive/shared_folder/Video\" #@param {type:\"string\"}\n",
         "video_concat_dir = \"\" #@param {type:\"string\"}\n",
         "#@markdown - The duration(time) per video segment\n",
         "segment_time = 1.0 #@param {type:\"number\"}\n",
@@ -322,7 +323,7 @@
         "        else:\n",
         "            timestamp = round(float(np.random.rand(1) * (duration - segment_time)),2)\n",
         "            #slice subclip\n",
-        "            subclip = selected_video.subclip(timestamp, timestamp+segment_time)\n",
+        "            subclip = selected_video.subclip(timestamp, timestamp+segment_time).resize((640,480))\n",
         "            print(\"selected timestamp (duration):\", timestamp, duration)\n",
         "\n",
         "        #add to output_clips\n",
